fixed stories grid to get rid of column gap

--- a/bizi/src/App.css
+++ b/bizi/src/App.css
@@ -481,11 +481,6 @@ nav.dark #myAccount a{
 .blueCircle{
   background: #385FDC;
 }
-.picRow {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-}
 
 #blank1 {
   opacity: .2;
@@ -499,24 +494,23 @@ nav.dark #myAccount a{
   opacity: .6;
 }
 
-.picCol {
-  position: relative;
+.imageContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  line-height: 0;
+  margin: 0 auto;
+  width: 90vw;
 }
 
-#picCol1 img{
-  margin-left: 4.46vw;
-}
-
-#picCol3 img{
-  margin-right: 4.46vw;
-}
-
-.picCol img {
+.gridElement {
   width: 30vw;
   height: 30vw;
+}
+
+.imageContainer img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  position: relative;
-  margin-top: -10px;
 }
 
 #stories-search {
@@ -537,7 +531,7 @@ nav.dark #myAccount a{
   font-size: 1.25em;
   padding: 0.75em 1.25em;
   margin-top: 1em;
-  margin-bottom: 3em;  
+  margin-bottom: 3em;
 }
 #searchbar2::placeholder{
   color: #a5b4e4;
